--- a/src/playground/Playground.css
+++ b/src/playground/Playground.css
@@ -1,6 +1,6 @@
 .translations-playground {
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 .translations-playground-card {
@@ -24,7 +24,6 @@
   background: lightgray;
 }
 
-
 .translations-playground-bg-coral {
   background: coral;
 }
@@ -38,4 +37,33 @@
   font-weight: bold;
   background-color: chocolate;
   color: white;
+}
+
+.translations-json-container {
+  max-height: 400px;
+  max-width: 95vw;
+  margin-bottom: 1rem;
+  border-radius: 40px;
+  background: lightyellow;
+  overflow: scroll;
+  padding: 1rem;
+}
+
+.translations-source-view-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.translations-code-box {
+  line-height: 1.5rem;
+  font-weight: bold;
+}
+
+.translations-input-box {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #000;
+  width: 400px;
 }
